data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1912.wast
;; 3. **Test 3: `br_if` with incorrect label index causing out-of-bounds access**    - **Constraint**: The label index must be within valid bounds, causing the instruction to fail if incorrect.    - **Check**: Observes if the `br_if` causes an exception or incorrect stack state.    - **Relation to Edge Cases**: Ensures `br_table` correctly handles out-of-bounds indices, similar to a `br_if` with an invalid label index.

(assert_invalid
  (module
    (func $br_if_invalid_label (block (br_if 1 (i32.const 1))))
  )
  "unknown label"
)